--- a/env.example
+++ b/env.example
@@ -2,3 +2,7 @@
 # All data comes from SEC EDGAR (public, free, official US government data)
 
 NODE_ENV=development
+
+# OpenAI API Key (opcional - solo necesario si quieres usar el análisis de IA)
+# Obtén tu API key en: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
