--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "fast-xml-parser": "^5.3.3",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
+    "openai": "^6.15.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
     "swr": "^2.3.7"
   },
