feat: add configuration for enabling/disabling AI analysis tab

--- a/env.example
+++ b/env.example
@@ -6,3 +6,6 @@ NODE_ENV=development
 # OpenAI API Key (opcional - solo necesario si quieres usar el análisis de IA)
 # Obtén tu API key en: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Enable/Disable AI Analysis Tab (set to "true" to enable, "false" to disable)
+NEXT_PUBLIC_ENABLE_AI_ANALYSIS=false
