--- a/env.example
+++ b/env.example
@@ -3,6 +3,10 @@
 
 NODE_ENV=development
 
+# Base URL for the application (only needed for local development)
+# In Vercel, this is automatically handled by VERCEL_URL
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
 # OpenAI API Key (opcional - solo necesario si quieres usar el análisis de IA)
 # Obtén tu API key en: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
